fix: initial setup.

--- a/website/i18n/en.json
+++ b/website/i18n/en.json
@@ -6,7 +6,7 @@
     "tagline": "A website for testing",
     "docs": {
       "doc1": {
-        "title": "Latin-ish",
+        "title": "Latin-ish12",
         "sidebar_label": "Example Page"
       },
       "doc2": {
