--- a/documentation/deploying-applications/overview.mdx
+++ b/documentation/deploying-applications/overview.mdx
@@ -1,7 +1,22 @@
 ---
-slug: /deploying-applications
+slug: "/deploying-applications"
 ---
 
 The mogenius platform offers several ways of deploying containerized applications to a Kubernetes cluster. Currently we support deploying services from git repositories, container registries and templates. We're extending these options soon by features like Docker compose, Helm charts, Terraform modules and more.
 
 You will find details about creating each service type on the pages below.
+
+<CardGroup cols={2}>
+  <Card title="Container Images" icon="container-storage" href="/deploying-applications/container-images">
+    
+  </Card>
+  <Card title="Pipeline Starters" icon="ship" href="/deploying-applications/pipeline-starters">
+    
+  </Card>
+  <Card title="Helm Charts" icon="sheet-plastic" href="/deploying-applications/helm-charts">
+    
+  </Card>
+  <Card title="Kubernetes Manifests" icon="draw-square" href="/deploying-applications/kubernetes-manifests">
+    
+  </Card>
+</CardGroup>
