--- a/documentation/workspaces/integrations.mdx
+++ b/documentation/workspaces/integrations.mdx
@@ -1,14 +1,15 @@
 ---
-sidebar_position: 6
+sidebar_position: "6"
 ---
 
 You can enrich the capabilities of your workspace with integrations that connect your Kubernetes resources with data from external tools. This way, mogenius provides a streamlined interface for monitoring and troubleshooting Kubernetes applications.
 
-## Github 
+## Github
 
 Use the Github integration to add logs and status information from Github actions to your Kubernetes deployments. This will populate the **Build log** on your application's detail page as well as adding a **Build status**.
 
 Here's how to set up the integration:
+
 1. Go to the **Integrations** tab in your workspace settings.
 2. Click **Connect** to authorize Github with your workspace.
 3. On the following screens you can sign in with your Github account, set the Github organization and the integration's permission.
@@ -16,12 +17,12 @@ Here's how to set up the integration:
 
 ## Gitlab
 
-:::info
-Coming soon 🚧
-:::
+<Note>
+   Coming soon 🚧
+</Note>
 
 ## ArgoCD
 
-:::info
-Coming soon 🚧
-:::
+<Note>
+  Coming soon 🚧
+</Note>
