--- a/documentation/cluster-management/managed-clusters.mdx
+++ b/documentation/cluster-management/managed-clusters.mdx
@@ -1,26 +1,29 @@
-﻿---
-sidebar_position: 10
+---
+sidebar_position: "10"
 ---
 
 Besides the options of connecting mogenius with your own Kubernetes clusters, we offer managed cluster for maximum simplicity and less overhead. These clusters are available on a range of cloud providers and they are fully managed up to the point that you can create projects and deploy services right away from mogenius.
 
 Here's some use cases where a managed cluster might be a good idea:
+
 - You don't have a cloud account yet and want a simple but scalable cloud environment
 - For isolated projects, prototyping, or MVPs, where you need to move fast without deep infrastructure requirements
 - For testing mogenius in your team before rolling it out on your own infrastructure
 
 ## Cloud providers
+
 We currently offer shared or dedicated clusters on these cloud providers:
+
 - [Google Cloud Platform](https://cloud.google.com/)
 - [Microsoft Azure](https://azure.microsoft.com)
 - [StackIT](https://stackit.de/)
 - [Plusserver](http://plusserver.com/)
 - [Hetzner](hetzner.com)
 
-
 ## Pricing
+
 We're working with fixed resources that will be added to your monthly subscription. The price for CPU, RAM and storage depends on the cloud provider and individual requirements that you might have. Service level agreements, and support times will be offered according to your requirements.
 
-:::info
-[Contact us](mailto:sales@mogenius.com) if you're interested in learning more about managed clusters. We're happy to create a proposal for you.
-:::
+<Note>
+  [Contact us](mailto:sales@mogenius.com) if you're interested in learning more about managed clusters. We're happy to create a proposal for you.
+</Note>
