--- a/documentation/cluster-management/network-policies.mdx
+++ b/documentation/cluster-management/network-policies.mdx
@@ -1,5 +1,5 @@
-﻿---
-sidebar_position: 3
+---
+sidebar_position: "3"
 ---
 
 The integrated network policy manager allows you to create and manage network policies on your cluster. With a built-in strategy for implementing network policies provided by mogenius, you can easily get started while enabling developers to leverage these capabilities in their services.
@@ -19,46 +19,50 @@ This framework aims to streamline policy management on your cluster, providing h
 To support network policies, a Container Network Interface (CNI) is required on your cluster. [Calico](https://www.tigera.io/project-calico/) or [Cilium](https://cilium.io/) are popular CNIs and most managed Kubernetes solutions (Amazon EKS, Azure AKS, Google Cloud GKE) offer options to enable a CNI during cluster creation.
 If you're uncertain if a CNI is available on your Kubernetes cluster or encountering setup issues, feel free to contact our [support](mailto:support@mogenius.com).
 
-## Enabling Network Policy Management  
+## Enabling Network Policy Management
 
-To enable network policy management:  
-1. Navigate to your cluster in mogenius and open the **Network Policies** tab.  
-2. A button is available for each namespace to enable network policy management. The interface will also indicate if unmanaged network policies (i.e., those not created through mogenius) are active in the namespace.  
-3. After enabling the feature, the `deny-all-ingress` and `allow-namespace-communication` policies are automatically added to the namespace.  
+To enable network policy management:
 
-:::warning
-When enabling network policy management, all previously created network policies in the namespace will be deleted. This ensures consistency and predictable results for policies created using mogenius. Be sure to back up any existing policies before proceeding.
-:::
+1. Navigate to your cluster in mogenius and open the **Network Policies** tab.
+2. A button is available for each namespace to enable network policy management. The interface will also indicate if unmanaged network policies (i.e., those not created through mogenius) are active in the namespace.
+3. After enabling the feature, the `deny-all-ingress` and `allow-namespace-communication` policies are automatically added to the namespace.
 
-## Deploying a Network Policy from the Network Policies Page  
+<Warning>
+  When enabling network policy management, all previously created network policies in the namespace will be deleted. This ensures consistency and predictable results for policies created using mogenius. Be sure to back up any existing policies before proceeding.
+</Warning>
 
-Once network policy management is enabled, the interface displays all controllers within the namespace. To deploy a network policy for a controller:  
-1. Click on **+Add** next to the controller.  
-2. Select the desired policy template from the list.  
-3. Confirm your choice.  
+## Deploying a Network Policy from the Network Policies Page
 
-To modify the templates available in the selection, refer to [Managing Network Policy Templates](#managing-network-policy-templates).  
+Once network policy management is enabled, the interface displays all controllers within the namespace. To deploy a network policy for a controller:
 
-## Deploying a Network Policy from Inside a Project  
+1. Click on **\+Add** next to the controller.
+2. Select the desired policy template from the list.
+3. Confirm your choice.
 
-After enabling network policy management for a namespace, developers can also utilize it within their mogenius projects. This enables them to securely and independently apply network policy templates within their projects.  
+To modify the templates available in the selection, refer to [Managing Network Policy Templates](#managing-network-policy-templates).
 
-To deploy a network policy for a service inside a project:  
-1. Open the service page.  
-2. Navigate to the **Network Policies** tab.  
-3. Select and apply policies from the available list of templates.  
+## Deploying a Network Policy from Inside a Project
 
-Because policy templates are managed globally and network policy management is enabled only by admins for each namespace, the scope of network policies remains confined to the specific namespace assigned to a developer or team.  
+After enabling network policy management for a namespace, developers can also utilize it within their mogenius projects. This enables them to securely and independently apply network policy templates within their projects.
 
-## Managing Network Policy Templates  
+To deploy a network policy for a service inside a project:
 
-When applying a network policy to a controller, a global ConfigMap is utilized to store all available policies as templates.  
+1. Open the service page.
+2. Navigate to the **Network Policies** tab.
+3. Select and apply policies from the available list of templates.
 
-- Upon first connecting your cluster to mogenius, a default set of templates is created.  
-- You can use the mogenius UI to add custom templates, update existing ones, or delete outdated templates.  
+Because policy templates are managed globally and network policy management is enabled only by admins for each namespace, the scope of network policies remains confined to the specific namespace assigned to a developer or team.
 
-To manage these templates:  
-1. Go to **Network Policies** in your cluster settings.  
-2. Click **Manage Policies** in the top-right corner of the page.  
+## Managing Network Policy Templates
 
-Changes made to the global list of templates do not affect existing controllers but will apply to any new network policies deployed to a controller thereafter.  
+When applying a network policy to a controller, a global ConfigMap is utilized to store all available policies as templates.
+
+- Upon first connecting your cluster to mogenius, a default set of templates is created.
+- You can use the mogenius UI to add custom templates, update existing ones, or delete outdated templates.
+
+To manage these templates:
+
+1. Go to **Network Policies** in your cluster settings.
+2. Click **Manage Policies** in the top-right corner of the page.
+
+Changes made to the global list of templates do not affect existing controllers but will apply to any new network policies deployed to a controller thereafter.
