--- a/documentation/overview/quickstart.mdx
+++ b/documentation/overview/quickstart.mdx
@@ -1,12 +1,13 @@
-﻿---
-sidebar_position: 2
+---
+sidebar_position: "2"
 ---
 
 Getting started with mogenius is easy. Here's a walkthrough of the most important steps for connecting your cluster and creating a workspace.
 
-<iframe width="100%" height="400" src="https://www.youtube.com/embed/_9Ex-lnEATI?si=2XWUGm4lg5O46dZg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+<iframe width="100%" height="400" src="https://www.youtube.com/embed/_9Ex-lnEATI?si=2XWUGm4lg5O46dZg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen />
 
 ## 1. Sign up​
+
 First, [sign up](https://app.mogenius.com/user/registration) for a mogenius account. You can use a social login (Github, Gitlab, Google, Microsoft), or your email address.
 
 ## 2. Create an organization
@@ -18,15 +19,17 @@ Create an organization, which represents the highest level in the mogenius accou
 Now, let's move on to the exciting part: connecting to a Kubernetes cluster. Once you have connected your cluster, you will be able to create workspaces for monitoring and navigating your applications, as well as deploying containers to your cluster with the built-in pipeline tools.
 
 ### Prerequisites
+
 To successfully complete the next steps, you will need the following:
+
 - A Kubernetes cluster. We recommend a managed Kubernetes service, like EKS (Amazon AWS), AKS (Microsoft Azure) or GKE (Google Cloud Platform), but any cluster with Kubernetes version 1.24 or higher will work. To get started, a local Kubernetes like minikube, Docker Desktop, or k3s, is also a great option.
 - A working installation of `Helm` and `kubectl`
 - OR optionally the [mogenius CLI](../development/mogenius-CLI.md)
 - Kubernetes cluster admin permissions
 
-:::info
-If you want to explore mogenius before connecting it with your cluster, check out the demo organization in your account. If you don't want to run mogenius with your own Kubernetes cluster, check out our section [Managed clusters](./../cluster-management/managed-clusters.md).
-:::
+<Note>
+  If you want to explore mogenius before connecting it with your cluster, check out the demo organization in your account. If you don't want to run mogenius with your own Kubernetes cluster, check out our section [Managed clusters](./../cluster-management/managed-clusters.md).
+</Note>
 
 After creating your organization, add a new cluster. Enter a name (this will only be used to display the cluster in mogenius) and proceed to install the operator.
 
@@ -36,15 +39,15 @@ Before you continue, make sure that you have a running Kubernetes cluster where 
 
 Copy the `Helm` or `mocli` command. Open a terminal and make sure that your kubecontext is set to the cluster that you want to connect with mogenius. Paste and execute the install command, return to mogenius, and click "I ran the command." The UI will confirm once the operator has established a connection with the mogenius controlplane.
 
-:::info
-Having trouble connecting the operator? Check out the [troubleshooting section.](../cluster-management/troubleshooting-clusters.md)
-:::
+<Note>
+   Having trouble connecting the operator? Check out the [troubleshooting section.](../cluster-management/troubleshooting-clusters.md)
+</Note>
 
 Once connected, the operator will check if a [metrics server](https://github.com/kubernetes-sigs/metrics-server) is present on the cluster. If not, it will be installed automatically.
-  
-**Done - your cluster is ready! 🥳 You can now create your first workspace.**
 
-## 8. Create a workspace ##
+**Done - your cluster is ready\! 🥳 You can now create your first workspace.**
+
+## 8. Create a workspace
 
 Head to the Workspaces section in your organization and click **Create workspace**. Select your cluster from the list, and enter a name for your workspace.
 
@@ -54,10 +57,9 @@ Finally, invite team members and define their roles and permissions. They'll rec
 
 ## 9. Congratulations - your workspace is ready 🎉
 
-**What's next?**  
+**What's next?**\
 Your dashboard is ready to start monitoring your applications in real-time. Check the status of your resources, monitor events, and browse through logs, metrics, or the resource topology for troubleshooting issues. Want to deploy a new application? Use the built-in [pipeline tools](../deploying-applications/index.md) to connect a registry, deploy a pipeline starter, or start from scratch with a YAML manifest.
 
-:::info
-If you need help, please take a look at our [Help & Feedback page](../help-and-feedback/index.md). You can contact us directly if you run into any problems.
-:::
-
+<Note>
+  If you need help, please take a look at our [Help & Feedback page](../help-and-feedback/index.md). You can contact us directly if you run into any problems.
+</Note>
