--- a/documentation/workspaces/mogenius-API.mdx
+++ b/documentation/workspaces/mogenius-API.mdx
@@ -12,8 +12,67 @@ To authenticate with the mogenius API, first create an API key. You can do this 
 - Define the expiration date.
 - Set the scope based on the [pre-defined groups](./members-and-roles.md).
 
-## Get started with the API
+## Set Image
+
+You can use the API to perform a `set image`  for your deployments via the mogenius operator.
+
+```
+curl --location 'https://platform-api.mogenius.com/workspace/workload/set-image' \
+--header 'Authorization: bearer YOUR_WORKSPACE_API_KEY' \
+--data '{
+    "kind": "Deployment",
+    "namespace": "YOUR_NAMESPACE",
+    "resourceName": "DEPLOYMENT_NAME",
+    "containerName": "CONTAINER_NAME",
+    "image": "CONTAINER_IMAGE"
+}'
+```
+
+## Helm Upgrade
+
+You can use the API to perform a `Helm upgrade` on a Helm release via the mogenius operator. For this to work, the Helm repository must be installed on the cluster first.
+
+The Helm upgrade can be performed with an API key on workspace level, or cluster level.
+
+<CodeGroup>
+
+``` Workspace level
+curl --location --request PATCH 'https://platform-api.mogenius.com/workspace/helm/release/upgrade' \
+--header 'Authorization: bearer YOUR_WORKSPACE_API_KEY' \
+--header 'Content-Type: application/json' \
+--data '{
+    "namespace": "YOUR_NAMESPACE",
+    "chart": "CHART_NAME", // REPO_NAME/CHART_NAME
+    "release": "RELEASE_NAME",
+    "version": "UPGRADE_TO_VERSION",
+    "values": {
+        "key1":"value1" // can also be a yaml string
+    },
+    "dryRun": false
+}'
+```
+
+
+``` Cluster level
+curl --location --request PATCH 'https://platform-api.mogenius.com/helm/admin/YOUR_CLUSTER_ID/release/upgrade' \
+--header 'Authorization: bearer YOUR_CLUSTER_API_KEY' \
+--header 'Content-Type: application/json' \
+--data '{
+    "namespace": "YOUR_NAMESPACE",
+    "chart": "CHART_NAME", // REPO_NAME/CHART_NAME
+    "release": "RELEASE_NAME",
+    "version": "UPGRADE_TO_VERSION",
+    "values": {
+        "key1":"value1" // can also be a yaml string
+    },
+    "dryRun": false
+}'
+```
+
+</CodeGroup>
+
+## Detailed API reference
 
 <Tip>
-   [**Check out our API reference for a detailed documentation of all endpoints.**](https://api-docs.mogenius.com/)
+  [**Check out our API reference for a detailed documentation of all endpoints.**](https://api-docs.mogenius.com/)
 </Tip>
