Documentation edits made through Mintlify web editor

--- a/documentation/cluster-management/installing-mogenius.mdx
+++ b/documentation/cluster-management/installing-mogenius.mdx
@@ -61,3 +61,9 @@ Once the operator is installed, it will check if a [metrics server](https://gith
 ## Troubleshooting
 
 If you're encountering issues with installing the operator, check out common problems in the section [Troubleshooting clusters](./troubleshooting-clusters.md).
+
+## Helm chart values
+
+The Helm chart for the mogenius operator supports a range of values that you can optionally adjust during the installation. Add them to the [Helm install command](https://docs.mogenius.com/documentation/cluster-management/installing-mogenius#helm-install) with `--set` .
+
+View the latest values on [Artifact Hub](https://artifacthub.io/packages/helm/mogenius/mogenius-k8s-manager#values).
