Updated navigation structure

--- a/deploying-applications/overview.mdx
+++ b/deploying-applications/overview.mdx
@@ -7,16 +7,16 @@ The mogenius platform offers several ways of deploying containerized application
 You will find details about creating each service type on the pages below.
 
 <CardGroup cols={2}>
-  <Card title="Container Images" icon="container-storage" href="/deploying-applications/container-images">
+  <Card title="Container Images" icon="container-storage" href="https://docs.mogenius.com/deploying-applications/container-images">
     
   </Card>
-  <Card title="Pipeline Starters" icon="ship" href="/deploying-applications/pipeline-starters">
+  <Card title="Pipeline Starters" icon="ship" href="https://docs.mogenius.com/deploying-applications/pipeline-starters">
     
   </Card>
-  <Card title="Helm Charts" icon="sheet-plastic" href="/deploying-applications/helm-charts">
+  <Card title="Helm Charts" icon="sheet-plastic" href="https://docs.mogenius.com/deploying-applications/helm-charts">
     
   </Card>
-  <Card title="Kubernetes Manifests" icon="draw-square" href="/deploying-applications/kubernetes-manifests">
+  <Card title="Kubernetes Manifests" icon="draw-square" href="https://docs.mogenius.com/deploying-applications/kubernetes-manifests">
     
   </Card>
 </CardGroup>
