--- a/cluster-management/installing-mogenius.mdx
+++ b/cluster-management/installing-mogenius.mdx
@@ -1,4 +1,4 @@
----
+﻿---
 sidebar_position: "1"
 description: "Connect your own Kubernetes cluster by installing the mogenius operator on the cluster."
 ---
@@ -11,7 +11,7 @@ To successfully complete the next steps, you will need the following:
 
 - A Kubernetes cluster. We recommend a managed Kubernetes service, like EKS (Amazon AWS), AKS (Microsoft Azure) or GKE (Google Cloud Platform), but any cluster with Kubernetes version 1.24 or higher will work. To get started, a local Kubernetes like Docker Desktop, k3s, or minikube is also a great option.
 - A working installation of `Helm` and `kubectl`
-- OR optionally the [mogenius CLI](../development/mogenius-CLI.md)
+- OR optionally the [mogenius CLI](./workspaces/mogenius-CLI.md)
 - Kubernetes cluster admin permissions
 
 ## Resource requirements
