Fixed broken links

--- a/cluster-management/managed-clusters.mdx
+++ b/cluster-management/managed-clusters.mdx
@@ -1,4 +1,4 @@
----
+﻿---
 sidebar_position: "10"
 ---
 
@@ -18,7 +18,7 @@ We currently offer shared or dedicated clusters on these cloud providers:
 - [Microsoft Azure](https://azure.microsoft.com)
 - [StackIT](https://stackit.de/)
 - [Plusserver](http://plusserver.com/)
-- [Hetzner](hetzner.com)
+- [Hetzner](https://hetzner.com)
 
 ## Pricing
 
