--- a/introduction.mdx
+++ b/introduction.mdx
@@ -1,4 +1,4 @@
----
+﻿---
 sidebar_position: "1"
 slug: "/"
 ---
@@ -12,9 +12,9 @@ Welcome to the mogenius documentation hub, your comprehensive resource for setti
 mogenius empowers you to monitor and manage Kubernetes applications easily. With Workspaces, teams get access to the resources they need in a safe way. They beautifully structure your Kubernetes clusters, simplify troubleshooting, and come with built-in pipeline tools to easily deploy any container to Kubernetes. To learn more about mogenius, please visit our [website](https://mogenius.com).
 
 <Tip>
-  [**Read our quickstart guide to set up mogenius and get started.**](./../overview/quickstart.md)
+  [**Read our quickstart guide to set up mogenius and get started.**](/overview/quickstart)
 
-  [**Or dive into how mogenius works for a comprehensive overview.**](../overview/how-mogenius-works.md)
+  [**Or dive into how mogenius works for a comprehensive overview.**](/overview/how-mogenius-works)
 </Tip>
 
 ## The mogenius documentation
@@ -26,7 +26,7 @@ This documentation hub serves as a resource for getting started, utilizing the p
 With mogenius, developers can work easily and safely with Kubernetes, without constant DevOps support. The platform provides developers with workspaces that abstract complexity, implement RBAC and guardrails, and automate deployments. mogenius therefore helps DevOps to reduce support overhead, ensure safe Kubernetes operations, and improve developer adoption.
 
 **Cloud-agnostic operator**\
-mogenius seamlessly integrates with Kubernetes clusters on any infrastructure, including cloud providers, on-premise, or local environments. The implementation is simple by installing the mogenius operator on Kubernetes using Helm. [Read more](../cluster-management/installing-mogenius.md)
+mogenius seamlessly integrates with Kubernetes clusters on any infrastructure, including cloud providers, on-premise, or local environments. The implementation is simple by installing the mogenius operator on Kubernetes using Helm. [Read more](/cluster-management/installing-mogenius)
 
 **Monitoring and logging**\
 mogenius offers aggregated monitoring of all service and resource metrics, traffic analytics, and consolidated build, deployment, and application runtime logs. Developers can independently navigate the resources they need to troubleshoot applications with real-time pod logs, Kubernetes events, resource topologies, and metrics.
