--- a/workspaces/service-status-and-errors.mdx
+++ b/workspaces/service-status-and-errors.mdx
@@ -17,4 +17,4 @@ Logs are streamed in real-time from pods and jobs and made available in the UI o
 On the detail page of an application, events are collected from different resources related to this application into a single log.
 
 ## Integrations
-You can extend the information on the application page with integrations that poll data from tools in your workflow, such as the CI pipeline. If an integration is enabled, you'll find additional status modules and logs on each detail page. Read more about [integrations](./integrations.md.md).
+You can extend the information on the application page with integrations that poll data from tools in your workflow, such as the CI pipeline. If an integration is enabled, you'll find additional status modules and logs on each detail page. Read more about [integrations](/workspaces/integrations).
