Documentation edits made through Mintlify web editor

--- a/overview/basic-concepts.mdx
+++ b/overview/basic-concepts.mdx
@@ -2,9 +2,7 @@
 sidebar_position: "4"
 ---
 
-The mogenius platform comprises multiple organizational levels tailored to various workflows and use cases for DevOps, developers, and teams. Here's a summary of the account hierarchy in mogenius:
-
-![cloudspace structure](https://imagedelivery.net/T7YEW5IAgZJ0dY4-LDTpyQ/a81bf0d1-b997-4c43-0059-b17935267400/jpeg)
+The mogenius platform comprises multiple organizational levels tailored to various workflows and use cases for DevOps, developers, and teams.
 
 ## Organizations
 
