--- a/introduction.mdx
+++ b/introduction.mdx
@@ -26,16 +26,13 @@ This documentation hub serves as a resource for getting started, utilizing the p
 With mogenius, developers can work easily and safely with Kubernetes, without constant DevOps support. The platform provides developers with workspaces that abstract complexity, implement RBAC and guardrails, and automate deployments. mogenius therefore helps DevOps to reduce support overhead, ensure safe Kubernetes operations, and improve developer adoption.
 
 **Cloud-agnostic operator**\
-mogenius seamlessly integrates with Kubernetes clusters on any infrastructure, including cloud providers, on-premise, or local environments. The implementation is simple by installing the mogenius operator on Kubernetes using Helm. [Read more](/cluster-management/installing-mogenius)
+mogenius seamlessly integrates with Kubernetes clusters on any infrastructure, including cloud providers, on-premise, or local environments. The implementation is simple by installing the mogenius operator on Kubernetes using Helm. [Read more](./cluster-management/installing-the-mogenius-operator)
 
 **Monitoring and logging**\
 mogenius offers aggregated monitoring of all service and resource metrics, traffic analytics, and consolidated build, deployment, and application runtime logs. Developers can independently navigate the resources they need to troubleshoot applications with real-time pod logs, Kubernetes events, resource topologies, and metrics.
 
 **Automated pipelines on Kubernetes clusters**\
 With mogenius, deploying applications on any Kubernetes cluster takes just minutes. Developers can easily connect their repositories (e.g., GitHub, GitLab, or container registries), and mogenius' pipeline starters will take care of the rest. If you prefer using your own pipeline instead, you can easily integrate it.
-
-**Templates**\
-With the template library teams can pre-define services to reduce pitfalls of service configurations, to promote best practices, and to set standards across teams. You can create templates with boilerplate repositories, public, or private container images.
 
 **Invite team members and assign roles**\
 Invite team members to collaborate on projects or organizations, granting them specific access rights such as viewing, editing, or admin roles. Control user permissions to ensure efficient collaboration.
