Added self-hosted documentation

--- a/cluster-management/self-hosted.mdx
+++ b/cluster-management/self-hosted.mdx
@@ -2,10 +2,14 @@
 sidebar_position: "6"
 ---
 
+<Warning>
+🚧 Work in progress
+</Warning>
+
 The mogenius platform is available as a SaaS option on [app.mogenius.com](https://app.mogenius.com). If you prefer the self-hosted version of mogenius, you can install it with our Helm chart. This way you can run mogenius on your own clusters and even in air-gapped environments.
 
 ## Prerequisites
-- A Kubernetes cluster with at least XX CPU and XX GB of memory available.
+- A Kubernetes cluster with at least 1 CPU and 1 GB of memory available.
 - A working local installation of [Helm](https://helm.sh/).
 - A MySQL server (optional)
 
